# garbage_collector

./: CMakeLists.txt  garbage_collector.c  garbage_collector.h  gc_collect.c  gc_collect.h  gc_init.c  gc_malloc.c  main.c  sweep.c  sweep.h
